...
                            <Image source={SignUpImage} style={styles.image} resizeMode="contain" />
                            <View style={styles.textContainer}>
                                <Text style={styles.headerText}>Your Name</Text>
                                <Text style={styles.promptText}>What should we call you?</Text>
                            </View>
                        </View>
                        <View style={styles.inputContainer} testID="nameInputText">
                            <TextInput
                                style={getTextInputStyle(isNameFocused)}
                                placeholder="Your name"
                                value={name}
                                onChangeText={setName}
                                onFocus={() => setIsNameFocused(true)}
                                onBlur={() => setIsNameFocused(false)}
                                placeholderTextColor="#D3D3D3"
                                maxLength={25} // Maximum character limit
                            />
                            <Text style={styles.characterCount}>{remainingCharacters} characters left</Text>
                        </View>
                        <View style={styles.buttonContainer} testId="saveNameButton">
                            <Button
                                disabled={name.length < 1}
                                title="Save"
                                onPress={() => {
                                    addName(name);
                                    navigation.navigate(PAGES.GROUP_LIST);
...
